builder-derive/tests/compile_fail/tuple_struct_not_supported.rs
use builder_derive::Builder;

#[derive(Builder)]
struct TupleStruct(String, i32);

fn main() {}
